--- a/hotelbooking/templates/hotelbooking/index.html
+++ b/hotelbooking/templates/hotelbooking/index.html
@@ -1,4 +1,4 @@
-{% extends 'hotelbooking/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
  {% block title %}
@@ -9,7 +9,7 @@
  {% block body %}
 	<body>
 
-	{% include 'hotelbooking/navbar.html' %}
+	{% include 'navbar.html' %}
 	{% include 'hotelbooking/hero.html' %}
 	{% include 'hotelbooking/bookingform.html' %}
 
@@ -451,7 +451,7 @@
       </div>
     </section>
 
-    {% include 'hotelbooking/footer.html' %}
+    {% include 'footer.html' %}
  {% endblock body %}
 	
  
