--- a/hotelbooking/templates/hotelbooking/index.html
+++ b/hotelbooking/templates/hotelbooking/index.html
@@ -9,8 +9,8 @@
  {% block body %}
 	<body>
 
-	{% include 'navbar.html' %}
-	{% include 'hotelbooking/hero.html' %}
+	
+	{% include 'hotelbooking/homehero.html' %}
 	{% include 'hotelbooking/bookingform.html' %}
 
 
