--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
   <body>
+    {% include 'navbar.html' %}
 
     {% block body %}{% endblock body %}
 
