--- a/hotelbooking/templates/hotelbooking/searchbar.html
+++ b/hotelbooking/templates/hotelbooking/searchbar.html
@@ -1,67 +1,15 @@
 	      		<div class="sidebar-wrap bg-light ftco-animate">
-	      			<h3 class="heading mb-4">Advanced Search</h3>
-	      			<form action="{% url 'hotelbooking:search' %}">
+	      			<h3 class="heading mb-4">Available Room Search</h3>
+	      			<form action="" method="post">
 						{% csrf_token %}
 	      				<div class="fields">
 		              <div class="form-group">
-		                <input type="text" id="checkin_date" name="start_date" class="form-control checkin_date" placeholder="Check In Date">
+		                <input type="date" id="checkin_date" {% if start_date %}value = '{{start_date}}'{% endif %} name="start_date" class="form-control " placeholder="Check In Date">
 		              </div>
 		              <div class="form-group">
-		                <input type="text" id="checkin_date" name="end_date" class="form-control checkout_date" placeholder="Check Out Date">
+		                <input type="date" id="checkin_date" name="end_date" {% if end_date %}value = '{{end_date}}'{% endif %} class="form-control " placeholder="Check Out Date">
 		              </div>
-		              <div class="form-group">
-		                <div class="select-wrap one-third">
-	                    <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-	                    <select name="" id="" class="form-control">
-	                    	<option value="">Room Type</option>
-	                    	<option value="">Suite</option>
-	                      <option value="">Family Room</option>
-	                      <option value="">Deluxe Room</option>
-	                      <option value="">Classic Room</option>
-	                      <option value="">Superior Room</option>
-	                      <option value="">Luxury Room</option>
-	                    </select>
-	                  </div>
-		              </div>
-		              <div class="form-group">
-		                <div class="select-wrap one-third">
-	                    <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-	                    <select name="" id="" class="form-control">
-	                    	<option value="">0 Adult</option>
-	                    	<option value="">1 Adult</option>
-	                      <option value="">2 Adult</option>
-	                      <option value="">3 Adult</option>
-	                      <option value="">4 Adult</option>
-	                      <option value="">5 Adult</option>
-	                      <option value="">6 Adult</option>
-	                    </select>
-	                  </div>
-		              </div>
-		              <div class="form-group">
-		                <div class="select-wrap one-third">
-	                    <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-	                    <select name="" id="" class="form-control">
-	                    	<option value="">0 Children</option>
-	                    	<option value="">1 Children</option>
-	                      <option value="">2 Children</option>
-	                      <option value="">3 Children</option>
-	                      <option value="">4 Children</option>
-	                      <option value="">5 Children</option>
-	                      <option value="">6 Children</option>
-	                    </select>
-	                  </div>
-		              </div>
-		              <div class="form-group">
-		              	<div class="range-slider">
-		              		<span>
-										    <input type="number" value="25000" min="0" max="120000"/>	-
-										    <input type="number" value="50000" min="0" max="120000"/>
-										  </span>
-										  <input value="1000" min="0" max="120000" step="500" type="range"/>
-										  <input value="50000" min="0" max="120000" step="500" type="range"/>
-										  </svg>
-										</div>
-		              </div>
+
 		              <div class="form-group">
 		                <input type="submit" value="Search" class="btn btn-primary py-3 px-5">
 		              </div>
