--- a/hotelbooking/templates/hotelbooking/package.html
+++ b/hotelbooking/templates/hotelbooking/package.html
@@ -43,7 +43,7 @@
 											{% comment %} <li><span>Bed:</span> {{room.room_bed}}</li> {% endcomment %}
 											</ul>
 											<hr>
-											<p class="pt-1"><a href="room-single.html" class="btn-custom">Book Now <span class="icon-long-arrow-right"></span></a></p>
+											<p class="pt-1"><a href="{% url 'hotelbooking:booking-package' package.id %}" class="btn-custom">Book Now <span class="icon-long-arrow-right"></span></a></p>
 											</div>
 										</div>
 									</div>
