--- a/hotelbooking/templates/hotelbooking/rooms-single.html
+++ b/hotelbooking/templates/hotelbooking/rooms-single.html
@@ -46,10 +46,28 @@
           </div> <!-- .col-md-8 -->
           <div class="col-lg-4 sidebar ftco-animate">
             <div class="sidebar-box">
-              <form action="#" class="search-form">
+              <form action="" method="GET"  class="search-form">
+                
                 <div class="form-group">
                   <span class="icon fa fa-search"></span>
-                  <input type="text" class="form-control" placeholder="Type a keyword and hit enter">
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="choice" id="exampleRadios1" value="booking">
+                    <label class="form-check-label" for="exampleRadios1">
+                      Booking
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="choice" id="exampleRadios2" value="confirm_booking">
+                    <label class="form-check-label" for="exampleRadios2">
+                      Confirm Booking
+                    </label>
+                  </div>
+                  <button type="submit" class="btn btn-primary mt-1">continue</button>
+
+
+
+
+
                 </div>
               </form>
             </div>
