--- a/hotelbooking/templates/hotelbooking/rooms.html
+++ b/hotelbooking/templates/hotelbooking/rooms.html
@@ -94,7 +94,7 @@
 											<li><span>Bed:</span> {{room.room_bed}}</li>
 											</ul>
 											<hr>
-											<p class="pt-1"><a href="{% url 'hotelbooking:booking-room' room.id %}" class="btn-custom">Book Now <span class="icon-long-arrow-right"></span></a></p>
+											<p class="pt-1"><a href="{% url 'hotelbooking:details-room' room.id %}" class="btn-custom">Details<span class="icon-long-arrow-right"></span></a></p>
 											</div>
 										</div>
 									</div>
