--- a/hotelbooking/templates/hotelbooking/hero.html
+++ b/hotelbooking/templates/hotelbooking/hero.html
@@ -1,14 +1,16 @@
-   {% load static %}
-   <div class="hero-wrap" style="background-image: url({% static 'images/bg_1.jpg'  %});">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row no-gutters slider-text d-flex align-itemd-end justify-content-center">
-          <div class="col-md-9 ftco-animate text-center d-flex align-items-end justify-content-center">
-          	<div class="text">
-	            <p class="breadcrumbs mb-2"><span class="mr-2"><a href="{% url 'hotelbooking:home' %}">Home</a></span> <span>About</span></p>
-	            <h1 class="mb-4 bread">{{pagename}}</h1>
-            </div>
-          </div>
+{% load static %}
+<div class="hero-wrap" style="background-image: url({% static 'images/bg_1.jpg' %});">
+  <div class="container">
+    <div class="row no-gutters slider-text d-flex align-itemd-end justify-content-center">
+      <div class="col-md-9 ftco-animate text-center d-flex align-items-end justify-content-center">
+        <div class="text">
+          <p class="breadcrumbs mb-2">
+            <span class="mr-2"><a href="{% url 'hotelbooking:home' %}">Home</a></span>
+            <span>About</span>
+          </p>
+          <h1 class="mb-4 bread">{{ pagename }}</h1>
         </div>
       </div>
     </div>
+  </div>
+</div>
