--- a/hotelbooking/templates/hotelbooking/searchbar.html
+++ b/hotelbooking/templates/hotelbooking/searchbar.html
@@ -1,18 +1,27 @@
-	      		<div class="sidebar-wrap bg-light ftco-animate">
-	      			<h3 class="heading mb-4">Available Room Search</h3>
-	      			<form action="" method="post">
-						{% csrf_token %}
-	      				<div class="fields">
-		              <div class="form-group">
-		                <input type="date" id="checkin_date" {% if start_date %}value = '{{start_date}}'{% endif %} name="start_date" class="form-control " placeholder="Check In Date">
-		              </div>
-		              <div class="form-group">
-		                <input type="date" id="checkin_date" name="end_date" {% if end_date %}value = '{{end_date}}'{% endif %} class="form-control " placeholder="Check Out Date">
-		              </div>
-
-		              <div class="form-group">
-		                <input type="submit" value="Search" class="btn btn-primary py-3 px-5">
-		              </div>
-		            </div>
-	            </form>
-	      		</div>
+<div class="sidebar-wrap bg-light ftco-animate">
+    <h3 class="heading mb-4">Available Room Search</h3>
+    <form action="" method="post">
+        {% csrf_token %}
+        <div class="fields">
+            <div class="form-group">
+                <input type="date"
+                       id="checkin_date"
+                       {% if start_date %}value = '{{ start_date }}'{% endif %}
+                       name="start_date"
+                       class="form-control "
+                       placeholder="Check In Date">
+            </div>
+            <div class="form-group">
+                <input type="date"
+                       id="checkin_date"
+                       name="end_date"
+                       {% if end_date %}value = '{{ end_date }}'{% endif %}
+                       class="form-control "
+                       placeholder="Check Out Date">
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Search" class="btn btn-primary py-3 px-5">
+            </div>
+        </div>
+    </form>
+</div>
