--- a/hotelbooking/templates/hotelbooking/rooms.html
+++ b/hotelbooking/templates/hotelbooking/rooms.html
@@ -60,7 +60,7 @@
                         {% endfor %}
                     </div>
                 {% else %}
-                    <div class ='col-sm-6 col-md-6 col-lg-4'>
+                    <div class ="col-sm-6 col-md-6 col-lg-4">
                         <div class="bold p-5">Dont have any data</div>
                     </div>
                 {% endif %}
