--- a/hotelbooking/templates/hotelbooking/createBooking.html
+++ b/hotelbooking/templates/hotelbooking/createBooking.html
@@ -21,8 +21,8 @@
                 <form action="" method="post">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <div class="pb-4 mb-6 mt-3 mb-4">
-                        <button type="submit" class ="btn btn-primary rounded-0 ">Booking</button>
+                    <div class="pb-4 mb-6 mt-3 mb-4 text-center">
+                        <button type="submit" class ="btn btn-primary rounded-0 p-6">Booking</button>
 
                     </div>
                 </form>
