--- a/hotelbooking/templates/hotelbooking/hero.html
+++ b/hotelbooking/templates/hotelbooking/hero.html
@@ -1,5 +1,6 @@
 {% load static %}
-<div class="hero-wrap" style="background-image: url({% static 'images/bg_1.jpg' %});">
+<div class="hero-wrap"
+     style="background-image: url({% static 'images/bg_1.jpg' %});"
   <div class="container">
     <div class="row no-gutters slider-text d-flex align-itemd-end justify-content-center">
       <div class="col-md-9 ftco-animate text-center d-flex align-items-end justify-content-center">
