--- a/hotelbooking/templates/hotelbooking/rooms.html
+++ b/hotelbooking/templates/hotelbooking/rooms.html
@@ -8,9 +8,9 @@
     <section class="ftco-section bg-light">
         <div class="container">
             <div class="row">
-                <col-8>
+                <div>
                 <h1>Available Rooms</h1>
-            </col-8>
+            </div>
         </div>
         <div class="row">
             <div class="col-lg-9">
