--- a/hotelbooking/templates/hotelbooking/searchroom.html
+++ b/hotelbooking/templates/hotelbooking/searchroom.html
@@ -1,69 +1,74 @@
 {% extends 'base.html' %}
 {% load static %}
-
-
 {% block title %}
-    Rooms
+    search room
 {% endblock title %}
-    
-
 {% block body %}
-    {% include 'hotelbooking/hero.html' with pagename="Rooms" %}
-
+    {% include 'hotelbooking/hero.html' with pagename="Search" %}
     <section>
-    	<div class="container">
-			<div class="row">
-				<col-8><h4>Available Rooms at {{start_date}}  to {{end_date}}</h4></col-8>
-			</div>
-
-    		<div class="row">
-	        <div class="col-lg-9">
-					
-		    		<div class="row">
-						
-						{% if rooms %}
-							{% for room  in rooms %}
-									<div class="col-sm col-md-6 col-lg-4 ftco-animate">
-										<div class="room">
-											<a href="{% url 'hotelbooking:details-room' room.id %} " class="img d-flex justify-content-center align-items-center" style="background-image: url({{room.room_image.url}});">
-												<div class="icon d-flex justify-content-center align-items-center">
-													<span class="icon-search2"></span>
-												</div>
-											</a>
-											<div class="text p-3 text-center">
-											<h3 class="mb-3"><a href="{% url 'hotelbooking:details-room' room.id %} ">{{room.room_category}}</a></h3>
-											<p><span class="price mr-2">${{room.room_price}}</span> <span class="per">per night</span></p>
-											<ul class="list">
-											<li><span>Max:</span> {{room.max_person}}</li>
-											<li><span>Size:</span> {{room.room_size}}</li>
-											<li><span>View:</span>{% for view in room.room_view.all %}{{view}} <span> </span> {% endfor %}</li>
-											<li><span>Bed:</span> {{room.room_bed}}</li>
-											</ul>
-											<hr>
-											<p class="pt-1"><a href="{% url 'hotelbooking:booking-room' room.id %}" class="btn-custom">Book Now <span class="icon-long-arrow-right"></span></a></p>
-											</div>
-										</div>
-									</div>
-							{% endfor %}
-							
-							
-							</div>
-							
-						{% else %}
-						<div class ='col-sm-6 col-md-6 col-lg-4'>
-							<div class="bold p-5">Dont have any Room in this date</div>
-						</div>
-							
-						{% endif %}
-							
-		    		
-		    	</div>
-                            <div class="col-lg-3">\
-                {% include 'hotelbooking/searchbar.html' %}
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12  my-4">
+                    <h1 class="p-2 text-center mx-auto">Available Rooms at {{ start_date }}  to {{ end_date }}</h1>
+                </div>
             </div>
-
-		    </div>
-
-    	</div>
+            <div class="row">
+                <div class="col-lg-9">
+                    <div class="row">
+                        {% if rooms %}
+                            {% for room  in rooms %}
+                                <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                                    <div class="room">
+                                        <a href="{% url 'hotelbooking:details-room' room.id %} "
+                                           class="img d-flex justify-content-center align-items-center"
+                                           style="background-image: url({{ room.room_image.url }})";>
+                                            <div class="icon d-flex justify-content-center align-items-center">
+                                                <span class="icon-search2"></span>
+                                            </div>
+                                        </a>
+                                        <div class="text p-3 text-center">
+                                            <h3 class="mb-3">
+                                                <a href="{% url 'hotelbooking:details-room' room.id %} ">{{ room.room_category }}</a>
+                                            </h3>
+                                            <p>
+                                                <span class="price mr-2">${{ room.room_price }}</span> <span class="per">per night</span>
+                                            </p>
+                                            <ul class="list">
+                                                <li>
+                                                    <span>Max:</span> {{ room.max_person }}
+                                                </li>
+                                                <li>
+                                                    <span>Size:</span> {{ room.room_size }}
+                                                </li>
+                                                <li>
+                                                    <span>View:</span>
+                                                    {% for view in room.room_view.all %}{{ view }} <span></span>{% endfor %}
+                                                </li>
+                                                <li>
+                                                    <span>Bed:</span> {{ room.room_bed }}
+                                                </li>
+                                            </ul>
+                                            <hr>
+                                            <p class="pt-1">
+                                                <a href="{% url 'hotelbooking:booking-room' room.id %}"
+                                                   class="btn-custom">Book Now <span class="icon-long-arrow-right"></span></a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        <div class ='col-sm-6 col-md-6 col-lg-4'>
+                            <div class="bold p-5">Dont have any Room in this date</div>
+                        </div>
+                    {% endif %}
+                </div>
+                <div class="col-lg-3">
+                    
+                    {% include 'hotelbooking/searchbar.html' %}
+                </div>
+            </div>
+        </div>
     </section>
-    {% endblock body %}
+{% endblock body %}
