--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,11 +8,11 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="{% url 'hotelbooking:home' %}" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="{% url 'hotelbooking:rooms' %}" class="nav-link">Rooms</a></li>
-	          <li class="nav-item"><a href="restaurant.html" class="nav-link">Restaurant</a></li>
+	          <li class="nav-item"><a href="{% url 'hotelbooking:restaurants_home' %}" class="nav-link">Restaurant</a></li>
 	          <li class="nav-item"><a href="{% url 'hotelbooking:packages' %}" class="nav-link">Package</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item"><a href="{% url 'hotelbooking:about-us' %}" class="nav-link">About</a></li>
+	          <li class="nav-item"><a href="{% url 'hotelbooking:blog' %}" class="nav-link">Blog</a></li>
+	          <li class="nav-item"><a href="{% url 'hotelbooking:contact-us' %}" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
 	    </div>
